# statusbar

./: Cargo.toml  README.md
blocks/: Cargo.toml
blocks/block/: Cargo.toml
blocks/block/src/: lib.rs
blocks/date/: Cargo.toml
blocks/date/src/: lib.rs
blocks/file/: Cargo.toml  README.md
blocks/file/src/: lib.rs
blocks/sh/: Cargo.toml  README.md
blocks/system-resources/: Cargo.toml
blocks/system-resources/src/: lib.rs
blocks/volume/: Cargo.toml
blocks/volume/src/: lib.rs
components/: Cargo.toml
components/battery/: Cargo.toml
components/date/: Cargo.toml  README.md
components/date/src/: lib.rs
components/file/: Cargo.toml
components/file/src/: lib.rs
components/filesystem/: Cargo.toml
components/filesystem/src/: lib.rs
components/keyboard-indicators/: Cargo.toml
components/keyboard-indicators/src/: lib.rs
components/no-resource/: Cargo.toml
components/no-resource/src/: lib.rs
components/resource/: Cargo.toml
components/resource/src/: lib.rs
components/sh/: Cargo.toml
components/sh/src/: lib.rs
components/system-resources/: Cargo.toml  README.md
components/system-resources/src/: lib.rs
components/volume/: Cargo.toml  README.md
components/volume/src/: lib.rs
src/: blocks.rs  main.rs  signal.rs
