[package]
name = "statusbar"
version = "0.1.0"
authors = ["David Buckley <david@davidbuckley.ca>"]
edition = "2018"

[dependencies]
x11rb = "0.9.0"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
async-channel = "1.6.1"
async-executor = "1.4.1"
async-io = "1.6.0"
futures-lite = "1.12.0"
libc = "0.2"
signal-hook = "0.3.10"

resource = { path = "components/resource" }
system-resources = { path = "components/system-resources" }
date = { path = "components/date" }
filesystem = { path = "components/filesystem" }
volume = { path = "components/volume" }
sh = { path = "components/sh" }
no-resource = { path = "components/no-resource" }
