[package]
name = "system-resources"
version = "0.1.0"
authors = ["David Buckley <david@davidbuckley.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resource = { path = "../resource" }
async-trait = "0.1.51"
async-io = "1.6.0"
async-fs = "1.5.0"
futures-lite = "1.12.0"
