[package]
name = "volume"
version = "0.1.0"
authors = ["David Buckley <david@davidbuckley.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resource = { path = "../resource" }
pulsectl-rs = "0.3.2"
async-trait = "0.1.51"
